fix(cursor): align clock cursor center

--- a/client/src/components/common/ClockHandCursor.css
+++ b/client/src/components/common/ClockHandCursor.css
@@ -5,20 +5,13 @@
   z-index: var(--z-cursor);
 }
 
-.clock-cursor__center {
-  position: fixed;
-  top: 0;
-  left: 0;
-}
-
 .clock-cursor__pivot,
 .clock-cursor__face,
 .clock-cursor__hand,
 .clock-cursor__glow {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  transform: translate(-50%, -50%);
 }
 
 .clock-cursor__face {
